<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation"
            app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.futureelectronics.osso.MainFragment"
        android:label="@string/main_frag_title"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/action_mainFragment_to_scanFragment"
            app:destination="@id/scanFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_mainFragment_to_ossoDetailsFragment"
            app:destination="@id/ossoDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/scanFragment"
        android:name="com.futureelectronics.osso.ScanFragment"
        android:label="@string/scan_frag_title"
        tools:layout="@layout/scan_fragment">
        <action
            android:id="@+id/action_scanFragment_to_ossoDetailsFragment"
            app:destination="@id/ossoDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/mainFragment"/>
    </fragment>
    <fragment
        android:id="@+id/ossoDetailsFragment"
        android:name="com.futureelectronics.osso.OssoDetailsFragment"
        android:label="@string/temp_osso_details_frag_title"
        tools:layout="@layout/fragment_osso_details">
        <argument
            android:name="ossoAddress"
            app:argType="string"/>
        <argument
            android:name="startTab"
            app:argType="string"
            app:nullable="true"/>
    </fragment>
</navigation>